--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <p class="lead">Short introduction of some sort.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/leigh.jpg" alt="Candle House">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/leigh.jpg" alt="leigh">
         </div>
       </div>
 
@@ -79,15 +79,15 @@
           <h2 class="featurette-heading"><a href="guzide.html">Güzide Sofi. </a><span class="text-muted">Cypriot studying in London.</span></h2>
           <p class="lead">(PS!!!!!!: I wrote this under the influence of pain killers and cough syrup so don't judge, its cheesy af) Hey, this is our homepage, so apparently I have to say something about myself. Sometimes, it is really hard to introduce yourself because you know yourself so well that you do not know where to start with and how you can tell people a lot about yourself without saying much. Here goes nothing.</p>
 
-<p class="lead">There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think, I like to dream; I like to talk, I like to listen; I like to sleep, I like to walk; I like to explore, I like to drive.</p>
+          <p class="lead">There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think, I like to dream; I like to talk, I like to listen; I like to sleep, I like to walk; I like to explore, I like to drive.</p>
 
-<p class="lead">I like to watch the sunset and gaze at the moonlight in the middle of the night when I cannot sleep. I like to smell the wind coming from the ocean, especially on a particularly hot day. I like to look at the clouds in the sky with a blank mind, just laying at a random park.</p>
+          <p class="lead">I like to watch the sunset and gaze at the moonlight in the middle of the night when I cannot sleep. I like to smell the wind coming from the ocean, especially on a particularly hot day. I like to look at the clouds in the sky with a blank mind, just laying at a random park.</p>
 
-<p class="lead">I always wanted to be a great photographer, like Ansel Adams or Dorothea Lange. They have influenced millions of people through their photographs and still to this day, they have such a huge impact on people’s lives. I also wanted to be a great mathematician like Pythagoras or John Forbes Nash Jr. Of course, I am nowhere close to these people. I am just someone who is studying Mathematics, doing research and taking photographs in the remaining of her time. However, my dream is still alive and I will always try to be the best version of myself.
- </p>
+          <p class="lead">I always wanted to be a great photographer, like Ansel Adams or Dorothea Lange. They have influenced millions of people through their photographs and still to this day, they have such a huge impact on people’s lives. I also wanted to be a great mathematician like Pythagoras or John Forbes Nash Jr. Of course, I am nowhere close to these people. I am just someone who is studying Mathematics, doing research and taking photographs in the remaining of her time. However, my dream is still alive and I will always try to be the best version of myself.
+          </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/guzide.jpg" alt="Hide and Seek">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/guzide.jpg" alt="guzide">
         </div>
       </div>
 
