--- a/rachel.html
+++ b/rachel.html
@@ -54,6 +54,9 @@
         <div class="col-md-7" id='originals'>
           <h2 class="featurette-heading">The Norwegian Bird. <span class="text-muted">An original song.</span></h2>
           <p class="lead">It's a sad love song written in times of insecurity and doubt. <span class="text-muted">"Broken words, broken hearts, half drunk wine and empty cups. Close the curtains, don’t let the light in. Clasping hands, shivering bones, sound of opening and slamming doors..."</span></p>
+          <audio controls>
+            <source src="audio/TheNorwegianBird.mp3" type="audio/mpeg">
+          </audio>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block img-rounded" src="images/norwegianbird.jpeg" alt="Norwegian Birds">
@@ -66,6 +69,9 @@
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Candle House. <span class="text-muted">Another original song.</span></h2>
           <p class="lead">A song I wrote after hearing the story of my parents, how they fell in love, got married, and then stayed in an unintentional, stagnant, loveless silence for several years before they peacefully divorced. <span class="text-muted">I want to show that almost disturbing serenity, the delicate balance of hope and despair as their relationship tended towards an end, a state where there is either complete darkness, or intense fire that burns the house down, thus came the title, Candle House.</span></p>
+          <audio controls>
+            <source src="audio/CandleHouse.mp3" type="audio/mpeg">
+          </audio>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block img-rounded" src="images/candlehouse.jpg" alt="Candle House">
@@ -78,6 +84,9 @@
         <div class="col-md-7" id='covers'>
           <h2 class="featurette-heading">Hide and Seek. <span class="text-muted">A cover of the Imogen Heap song.</span></h2>
           <p class="lead">I tried to turn Imogen Heap's beautiful vocal harmonies into guitar accompaniment. Hope I didn't ruin the song. <span class="text-muted">"Oily marks appear on walls where pleasure moments hung before. The takeover, the sweeping insensitivity of this still life..."</span></p>
+          <audio controls>
+            <source src="audio/HideandSeek.mp3" type="audio/mpeg">
+          </audio>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block img-rounded" src="images/hideandseek.jpg" alt="Hide and Seek">
