finally managed to add the slides

--- a/slides3.html
+++ b/slides3.html
@@ -5,6 +5,11 @@
 body {
   font-family: Arial;
   margin: 0;
+  background-color: #1B1B1B;
+}
+
+h2 {
+  color: white;
 }
 
 * {
@@ -111,52 +116,42 @@ img {
 
 <div class="container">
   <div class="mySlides">
-    <div class="numbertext">1 / 9</div>
-    <img src="images/Architectural9.jpg" style="width:100%">
+    <div class="numbertext">1 / 7</div>
+    <img src="images/nature1.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">2 / 9</div>
-    <img src="images/Architectural2.jpg" style="width:100%">
+    <div class="numbertext">2 / 7</div>
+    <img src="images/nature2.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">3 / 9</div>
-    <img src="images/Architectural3.jpg" style="width:100%">
+    <div class="numbertext">3 / 7</div>
+    <img src="images/nature3.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">4 / 9</div>
-    <img src="images/Architectural4.jpg" style="width:100%">
+    <div class="numbertext">4 / 7</div>
+    <img src="images/nature4.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">5 / 9</div>
-    <img src="images/Architectural5.jpg" style="width:100%">
+    <div class="numbertext">5 / 7</div>
+    <img src="images/nature5.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">6 / 9</div>
-    <img src="images/Architectural6.jpg" style="width:100%">
+    <div class="numbertext">6 / 7</div>
+    <img src="images/nature6.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">7 / 9</div>
-    <img src="images/Architectural7.jpg" style="width:100%">
+    <div class="numbertext">7 / 7</div>
+    <img src="images/nature7.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides">
-    <div class="numbertext">8 / 9</div>
-    <img src="images/Architectural8.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">9 / 9</div>
-    <img src="images/Architectural1.jpg" style="width:100%">
-  </div>
-
-  <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a>
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
   <div class="caption-container">
     <p id="caption"></p>
@@ -164,32 +159,27 @@ img {
 
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="images/Architectural9.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+      <img class="demo cursor" src="images/nature1.jpg" style="width:100%" onclick="currentSlide(1)" alt="Reading">
     </div>
     <div class="column">
-      <img class="demo cursor" src="images/Architectural2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+      <img class="demo cursor" src="images/nature2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Primrose Hill">
     </div>
     <div class="column">
-      <img class="demo cursor" src="images/Architectural3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="images/nature3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Sussex">
     </div>
     <div class="column">
-      <img class="demo cursor" src="images/Architectural4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="images/nature4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Devils Dyke, Sussex">
     </div>
     <div class="column">
-      <img class="demo cursor" src="images/Architectural5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+      <img class="demo cursor" src="images/nature5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Mykonos, Greece">
     </div>
     <div class="column">
-      <img class="demo cursor" src="images/Architectural6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+      <img class="demo cursor" src="images/nature6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Sussex">
     </div>
     <div class="column">
-      <img class="demo cursor" src="images/Architectural7.jpg" style="width:100%" onclick="currentSlide(7)" alt="Snowy Mountains">
+      <img class="demo cursor" src="images/nature7.jpg" style="width:100%" onclick="currentSlide(7)" alt="Cyprus">
     </div>
     <div class="column">
-      <img class="demo cursor" src="images/Architectural8.jpg" style="width:100%" onclick="currentSlide(8)" alt="Snowy Mountains">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="images/Architectural1.jpg" style="width:100%" onclick="currentSlide(9)" alt="Snowy Mountains">
-    </div>
   </div>
 </div>
 
