--- a/guzide.html
+++ b/guzide.html
@@ -68,7 +68,7 @@
         </div>
         <div class="col-md-5">
           <!-- Make sure the picture here is rectangular so it looks pretty, unless you have a lot to write about lol-->
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/IMG_3950.jpg" alt="Norwegian Birds">
+          <a href="slides1.html"><img class="featurette-image img-responsive center-block img-rounded" src="images/IMG_3950.jpg" alt="Architectural Collage"></a>
         </div>
       </div>
 
@@ -81,7 +81,7 @@
           <span class="text-muted">Sunsets have almost been my favourite time of the day to photograph. It's a bit cliche but sunsets have this property of being ordinary but yet spectacular at the same time.</span></p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/IMG_3949.jpg" alt="Candle House">
+          <a href="slides2.html"><img class="featurette-image img-responsive center-block img-rounded" src="images/IMG_3949.jpg" alt="Sunsets and Rain Collage"></a>
         </div>
       </div>
 
@@ -93,7 +93,7 @@
           <p class="lead">Here is a few nature photographs I took this year mainly in London, Reading, Sussex and Cyprus. <span class="text-muted">Just like in some of the architectural photographs I posted above, we can spot the contrast between nature and cities here as well, expecially in the first three pictures...</span></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/IMG_3948.jpg" alt="Hide and Seek">
+          <a href="slides3.html"><img class="featurette-image img-responsive center-block img-rounded" src="images/IMG_3948.jpg" alt="Nature Collage"></a>
         </div>
       </div>
 
