another clickable link added
Did a bit CSS on it but be my guess if you wanna edit it furthermore

--- a/guzide.html
+++ b/guzide.html
@@ -54,15 +54,15 @@
       <div class="row featurette">
         <div class="col-md-7" id='originals'>
           <h2 class="featurette-heading">Architectural Photography. <span class="text-muted">Buildings from different perspectives.</span></h2>
-          <p class="lead">Here is a list of the best London photography spots and tips. <span class="text-muted">21 best London photography spots (and tips for each one!):
+          <a href="topspots.html"><p class="lead">Here is a list of the best London photography spots and tips.</a><span class="text-muted"> 26 best London photography spots (and tips!):
             <ol><span class="text-muted">
-              <li>Regent street</li>
-              <li>Portobello Road</li>
-              <li>Tate Modern</li>
-              <li>Greenwich park</li>
-              <li>Little Venice</li>
-              <li>Shoreditch street art</li>
-              <li>Primrose Hill...</li>
+              <li></li>
+              <li>Neal's Yard</li>
+              <li>Tower Bridge</li>
+              <li>St Paul's Cathedral</li>
+              <li>Leadenhall Market</li>
+              <li>View from the Shard</li>
+              <li>Kings Cross Light Tunnel...</li>
             </ol></span></p>
           </span></p>
         </div>
