more css on topspots

--- a/topspots.html
+++ b/topspots.html
@@ -6,26 +6,38 @@
 body {
     font-family: Arial;
     margin: 1;
+    background-image:  url("images/nightsky.jpg");
+    background-color: #cccccc;
+}
+
+h1 {
+ color: white;
+}
+
+ol{
+  color: white;
 }
 
 ul {
-    border-left: 5px solid red;
-    background-color: #f1f1f1;
+    color: black;
+    border-left: 5px solid blue;
+    background-image: url("images/purple.jpg");
     list-style-type: none;
     padding: 10px 20px;
 }
 
 ul li {
-    background: #ffe5e5;
-    margin: 5px;
-
+    background: #D8BFD8;
+    padding: 5px;
+    margin-left: 35px;
+}
 </style>
 </head>
 <body>
 
 <button onclick="goBack()">Go Back</button>
 
-<h1>26 best London photography spots</h1>
+<h1>26 Best London Photography Spots</h1>
 
 <ol type="1">
   <li><strong>Neal's Yard</strong>
