made it simpler
it looked like a world file one would do in elementary school so here is a simpler version, swear i give up now

--- a/topspots.html
+++ b/topspots.html
@@ -6,22 +6,21 @@
 body {
     font-family: Arial;
     margin: 1;
-    background-image:  url("images/nightsky.jpg");
-    background-color: #cccccc;
+    background-color: white;
 }
 
 h1 {
- color: white;
+ color: black;
 }
 
 ol{
-  color: white;
+  color: black;
 }
 
 ul {
     color: black;
-    border-left: 5px solid blue;
-    background-image: url("images/purple.jpg");
+    border-left: 5px solid purple;
+    background-color: #D8BFD8;
     list-style-type: none;
     padding: 10px 20px;
 }
