--- a/topspots.html
+++ b/topspots.html
@@ -3,9 +3,6 @@
 <head>
 <style>
 
-body {
-  text: center;
-}
 
 * {
   margin: 0;
@@ -17,13 +14,13 @@ body {
 
 a {
   text-decoration:none;
-  color:blak;
+  color:black;
 }
 
 nav {
-  margin:25px;
-  width:350px;
-  border:1px solid grey;
+  margin:50px;
+  width:800px;
+  border:2px solid grey;
   padding:1em;
 
 }
