--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading"><a href="leigh.html">Leigh Rowland.</a> <span class="text-muted">A Northern girl living in London.</span></h2>
-          <p class="lead">Hey I'm Leigh. I don't have much to say here. I'm trying to study Maths and Economimcs but it's proving pretty difficult.</p>
-          <p class="lead">I have 2 jobs and we all know how time consuming LSE is so i don't get much free time, but when I do, I fill it with some kind of sport and the occassional (weekly) trip to zoo bar. </p>
+          <p class="lead">Hey I'm Leigh. I don't have much to say here. I'm trying to study Maths and Economics but it's proving pretty difficult.</p>
+          <p class="lead">I have 2 jobs and we all know how time consuming LSE is so I don't get much free time, but when I do, I fill it with some kind of sport and the occassional (weekly) trip to zoo bar. </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block img-rounded" src="images/leigh.jpg" alt="leigh">
