some links added

--- a/guzide.html
+++ b/guzide.html
@@ -75,7 +75,7 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Sunsets and Rain. <span class="text-muted">and Everything in between.</span></h2>
+          <h2 class="featurette-heading"><a href="https://jekophoto.eu/tools/twilight-calculator-blue-hour-golden-hour">Sunsets and Rain.</a> <span class="text-muted">and Everything in between.</span></h2>
           <p class="lead">In photography, the golden hour is the period of daytime shortly after sunrise or before sunset, during which daylight is redder and softer than when the Sun is higher in the sky. The opposite period during twilight is blue hour, just before sunrise or after sunset, when indirect sunlight is evenly diffused.</span></p>
           <span class="text-muted">Sunsets have almost been my favourite time of the day to photograph. It's a bit cliche but sunsets have this property of being ordinary but yet spectacular at the same time.</span></p>
         </div>
@@ -88,7 +88,7 @@
 
       <div class="row featurette">
         <div class="col-md-7" id='covers'>
-          <h2 class="featurette-heading">Nature Photography. <span class="text-muted">Parks, roads, hills, sea.</span></h2>
+          <h2 class="featurette-heading"><a href="https://prezi.com/9-wf6wvprsgq/nature-photography-facts/">Nature Photography. </a><span class="text-muted">Parks, roads, hills, sea.</span></h2>
           <p class="lead">Here is a few nature photographs I took this year mainly in London, Reading, Sussex and Cyprus. <span class="text-muted">Just like in some of the architectural photographs I posted above, we can spot the contrast between nature and cities here as well, expecially in the first three pictures...</span></p>
         </div>
         <div class="col-md-5">
