--- a/topspots.html
+++ b/topspots.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='css/topspots.css' rel='stylesheet'>
   <link href='css/bootstrap.css' rel='stylesheet'>
+  <title>26 Best London Photography Spots</title>
 </head>
 <body>
   <div class="background">
