--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>This is for our HTML group project.</h1>
-              <p>It's like a blog post where we each have one page and write about whatever we want. Life, love, food, travel, all that good stuff.</p>
+              <p>We didn't have anything in our lives worthy of its own website so we put all our distinct interests into this one hotchpotch of a website and called it a day. It's cute though you should check it out.</p>
             </div>
           </div>
         </div>
