--- a/leigh.html
+++ b/leigh.html
@@ -36,7 +36,7 @@
       <div class="carousel-inner">
         <div class="item active">
           <!-- Change here for the background image. -->
-          <img class="first-slide" src='images/playing 2.jpg!d' alt='Titlepic'>
+          <img class="first-slide" src='images/playing.jpg' alt='Titlepic'>
           <div class="container">
             <div class="carousel-caption">
               <h1>I'm Leigh and I love sport.</h1>
