--- a/guzide.html
+++ b/guzide.html
@@ -8,6 +8,8 @@
     <title>Güzide - Photography</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   </head>
 <!-- NAVBAR ** do not change this part.
 ================================================== -->
