--- a/rachel.html
+++ b/rachel.html
@@ -7,6 +7,8 @@
     <title>Rachel - Music</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
