--- a/guzide.html
+++ b/guzide.html
@@ -10,6 +10,7 @@
     <link href="css/custom.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Reenie+Beanie" rel="stylesheet">
   </head>
 <!-- NAVBAR ** do not change this part.
 ================================================== -->
