--- a/guzide.html
+++ b/guzide.html
@@ -43,7 +43,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>I'm Güzide and I photograph things.</h1>
-              <p> Hi there, below is the partial summary of my portfolio with a few tips and ideas. If you are ever curious about my whereabouts, you can probably see me on my knees in London or elsewhere taking a picture of a historic landmark, the sunset or perhaps a modern art piece.</p>
+              <p> Hi there, below is the partial summary of my portfolio with a few tips and ideas.</p>
             </div>
           </div>
         </div>
